Fix spacing for mobile view

--- a/dev/scss/_installspec.scss
+++ b/dev/scss/_installspec.scss
@@ -1,14 +1,18 @@
 // SECTIONS: INSTALL & SPEC
-
+@use 'mixins' as *;
+@use 'variables' as *;
 
 div#install-spec {
-    padding: 0 0 3rem;
     position: relative;
     overflow: hidden;
-    padding: 0 0 5rem;
-
+    
     .wave {
+        @include wave;
         background-image: url(/images/wave-blue-light.png);
+    }
+
+    h2 {
+        width: 60%;
     }
 }
 
@@ -16,9 +20,11 @@ section#install {
     background: url(../images/map.jpg);
     background-size: cover;
     background-position: center;
-    color: $grey;    
+    color: $grey; 
+    padding: 7rem 0;   
 
     .box-link {
+        @include box-link;
         border: 1px solid $grey;
         color: $grey;
     }
@@ -27,11 +33,12 @@ section#install {
 section#spec {
     color: #fff;
     position: relative;
+    padding: 4rem 0 9rem;
 
     h2 {
-        width: 60%;
         margin: 0 auto 2rem;
     }
+
 }
 
 
