--- a/dev/scss/_mixins.scss
+++ b/dev/scss/_mixins.scss
@@ -16,8 +16,8 @@
     background-size: 160% 80%;
     background-repeat: no-repeat;
     background-position: bottom;
-    width: 120%;
-    height: 160px;
+    width: 130%;
+    height: 130px;
     position: absolute;
     left: 0;
     bottom: 0;
